# eda-2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
exercises/01/a/: code.c
exercises/01/b1/: code.c
exercises/01/b2/: code.c
exercises/01/c/: code.c
exercises/01/d/: code.c
exercises/01/e/: code.c
exercises/01/f/: code.c
exercises/01/g/: ans.txt  code.c
exercises/01/g/inputs/: 01.txt
exercises/01/h1/: ans.txt  code.c
exercises/01/h1/inputs/: 01.txt
exercises/01/h2/: ans.txt  code.c
exercises/01/i/: code.c
exercises/01/j/: ans.txt  code.c
exercises/01/j/inputs/: 01.txt  02.txt  04.txt  05.txt
exercises/01/k/: ans.txt  code.c
exercises/01/l1/: code.c
exercises/01/l2/: code.c
exercises/02/a/: code.c
exercises/02/b/: ans.txt  code.c
exercises/02/c/: code.c
exercises/02/c/inputs/: 02.txt
exercises/02/c1/: ans.txt  code.c
exercises/02/d/: ans.txt  code.c
exercises/02/d/inputs/: 01.txt  02.txt  03.txt  04.txt
exercises/02/e/: code.c
exercises/02/f/: ans.txt  code.c
exercises/02/h/: ans.txt  code.c
exercises/02/h/inputs/: 12.txt
exercises/03/a/: code.c
exercises/03/b/: ans.txt  code.c
exercises/04/a/: ans.txt  code.c
exercises/04/a/inputs/: 01.txt  02.txt
exercises/04/b/: ans.txt  code.c
exercises/04/b/inputs/: 01.txt  02.txt  03.txt  (+1 more)
exercises/04/c/: code.c
exercises/04/d/: ans.txt  code.c
exercises/05/a/: ans.txt  code.c
exercises/05/b/: ans.txt  code.c
exercises/05/c/: ans.txt  code.c  test.sh
exercises/05/d/: code.c
exercises/05/e/: code.c
exercises/06/a/: ans.txt  code.c
(+12 files in other folders)
