[tool.poetry]
name = "eda-2"
version = "0.0.0"
description = "Repositório contendo as resoluções das listas de exercícios de Estruturas de Dados 2."
authors = ["kyomi <me@kyomi.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
commitizen = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
